# s3cpp

./: CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: ci.yml  manual.yml
src/s3cpp/: #auth.h#  auth.cpp  auth.h  foo.h  httpclient.cpp  httpclient.h  s3.cpp  s3.h  s3.hpp  types.h  xml.h  xml.hpp
test/: auth_test.cpp  foo_test.cpp  httpclient_test.cpp  s3_test.cpp  xml_test.cpp
